[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/sprites/Plants/WhiteButton/WhiteButtonMush.png" type="Texture" id=1]
[ext_resource path="res://scenes/Plants/WhiteButtonMush.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 15, 6.5 )

[node name="WhiteButtonMush" type="Area2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 9.5 )
shape = SubResource( 6 )

[node name="ProductionTimer" type="Timer" parent="."]
autostart = true

[node name="ProducedLabel" type="Label" parent="."]
visible = false
margin_left = -72.0
margin_top = -44.0
margin_right = 73.0
margin_bottom = -13.0
text = "No spores to harvest :("
align = 1
valign = 1
autowrap = true

[node name="RayCastBelow" type="RayCast2D" parent="."]
position = Vector2( -13, 16 )
enabled = true
cast_to = Vector2( 0, 1 )
collide_with_areas = true

[node name="RayCastBelow2" type="RayCast2D" parent="."]
position = Vector2( 13, 16 )
enabled = true
cast_to = Vector2( 0, 1 )
collide_with_areas = true

[node name="RayCastAbove" type="RayCast2D" parent="."]
position = Vector2( 10, -17 )
enabled = true
cast_to = Vector2( 0, 1 )
collide_with_areas = true

[node name="RayCastAbove2" type="RayCast2D" parent="."]
position = Vector2( -10, -17 )
enabled = true
cast_to = Vector2( 0, 1 )
collide_with_areas = true

[connection signal="area_entered" from="." to="." method="_on_WhiteButtonMush_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_WhiteButtonMush_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_WhiteButtonMush_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_WhiteButtonMush_body_exited"]
[connection signal="timeout" from="ProductionTimer" to="." method="_on_ProductionTimer_timeout"]
